# note

./: .envrc  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE-MIT  MODULE.bazel  README.md  bazel-bin  bazel-note  bazel-out  bazel-testlogs  check.yaml  flake.nix  release-please-config.json  rust-toolchain.toml  test.yaml
.copr/: Makefile
.github/: dependabot.yaml
.github/workflows/: check.yaml  check.yml  ci.yaml  ci.yml  common.yaml  coverage.yaml  publish.yaml  release-please.yaml  release-please.yml  rpm-check.yaml  rpm-release.yaml  scheduled.yml  test.yaml  test.yml
assets/: example.md
md-json/: Cargo.toml  README.md
md-json/assets/: example.json  example.md  front_matter.md  html.md  test_parse_html.md
md-json/src/: error.rs  lib.rs  parser.rs
md-parser/: Cargo.toml  README.md
md-parser/src/: lib.rs  parser.rs
note-cli/: BUILD.bazel  Cargo.toml  README.md
note-cli/shell/: __note_list_completion.fish
note-cli/src/: cli.rs  config.rs  edit.rs  list.rs  main.rs  query.rs  search.rs  sync.rs
rpm/: Makefile  rust-note.spec
scripts/ci/: check-for-publish.sh  coverage.sh
src/: cli.rs  command.rs  config.rs  edit.rs  list.rs  main.rs  query.rs  search.rs  sync.rs
src/parser/: error.rs  mod.rs
templates/: note.md
