[package]
name = "note"
version = "0.1.1"
categories = ["command-line-utility"]
edition = "2024"
keywords = ["notes", "journal", "cli"]
license = "APACHE-2.0 OR MIT"
publish = false
repository = "https://github.com/joshuachp/note"
description = "Note taking utility"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.65"
clap_mangen = "0.2.31"
color-eyre = "0.6.5"
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
indexmap = { version = "2.13.0", features = ["serde"] }
pulldown-cmark = { version = "0.13.0", features = ["serde"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tantivy = "0.25.0"
thiserror = "2.0.18"
toml = "1.0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"
winnow = "0.7.14"
yaml-rust2 = "0.11.0"

[dev-dependencies]
tempfile = "3.24.0"
