[package]
name = "note"
version = "0.4.0"
categories = ["command-line-utility"]
edition = "2024"
keywords = ["notes", "journal", "cli"]
license = "APACHE-2.0 OR MIT"
publish = false
repository = "https://github.com/joshuachp/note"
description = "Note taking utility"

[dependencies]
askama = "0.15.6"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.1"
clap_mangen = "0.3.0"
color-eyre = "0.6.5"
dirs = "6.0.0"
env_logger = "0.11.9"
eyre = "0.6.12"
indexmap = { version = "2.13.1", features = ["serde"] }
pulldown-cmark = { version = "0.13.3", features = ["serde"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tantivy = "0.26.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"
winnow = "1.0.1"
yaml-rust2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
