[package]
name = "md-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = [ "serde" ] }
env_logger.workspace = true
indexmap = { workspace = true, features = [ "serde" ] }
log.workspace = true
nom.workspace = true
pulldown-cmark = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
walkdir.workspace = true
