[package]
name = "md-parser"
version = "0.1.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
indexmap = { workspace = true, features = ["serde"] }
pulldown-cmark = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
winnow = { workspace = true }
yaml-rust2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
