[package]
name = "note-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "note"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap = { workspace = true, features = [ "derive" ] }
clap_complete.workspace = true
color-eyre = { workspace = true, default-features = false }
dirs.workspace = true
env_logger.workspace = true
log.workspace = true
regex.workspace = true
serde = { workspace = true, features = [ "derive" ] }
toml.workspace = true

[dependencies.md-json]
path = "../md-json"
